layout bugfix

--- a/src/main.scss
+++ b/src/main.scss
@@ -490,6 +490,7 @@ header,
 }
 
 .sidebar {
+  min-width: 240px;
   border: 1px solid rgba(0, 0, 0, 0.12);
   .menu {
     box-shadow: none;
